			Moved Create Game and Direct Connect facilities to the server browser.
			Added skirmish mode to RA and D2k to complement TD's skirmish mode.
			Added an Extras submenu for miscellaneous game extras.
		Engineers can now regain control over husks.
		A player's units, and allied units, now move out of the way when blocking production facilities.
	Dune 2000:
		Added the Atreides grenadier from the 1.06 patch.
		Added randomized tiles for Sand and Rock terrain.
		Shroud is now displayed by default again (disable it in the lobby settings).
		Removed the build radius restrictions.
		Added the BLOXXMAS terrain tiles from the 1.06 patch.
	Red Alert:
		Tanya can now plant C4 on bridges.
		Submarine torpedoes can now hit bridges when force fired.
		Increased torpedo splash damage and raised multiplier vs. concrete.
		Fixed transparency glitches in the sniper icon.
		Removed health bars and selection boxes from walls.
	Tiberian Dawn:
		Commando can now plant C4 on bridges.
		Added the Asset Browser to the Extras menu.
		Removed health bars and selection boxes from walls.
		Changed Nod Obelisk HP to 600 from 400, same as Advanced Guard Tower
	Engine:
		Converted Aircraft CruiseAltitude to world coordinates.
		Converted Health Radius to world coordinates.
		Converted production exits to world coordinates.
		Converted weapon projectiles to world coordinates.
		Converted actor speed to world coordinates.
		Added support for rectangular cells with forced perspective.
		Added initial support for Tmp(TS) sprites.
		Added GainsUnitUpgrades trait for leveling specific unit upgrades - firepower, armor, speed.
		Added support for crates to level up specific unit upgrades.
		Added a new Launch.Replay=$FILEPATH parameter for OpenRA.Game.exe to instantly start watching a *.rep file.
		Added HackyAI settings: ExcessPowerFactor, MinimumExcessPower, IdleBaseUnitsMaximum, RushAttackScanRadius, ProtectUnitScanRadius, RallyPointScanRadius. See the traits documentation for more information.