@@ -9,6 +9,7 @@ NEW:
 			Added an Extras submenu for miscellaneous game extras.
 		Engineers can now regain control over husks.
 		A player's units, and allied units, now move out of the way when blocking production facilities.
+		Added cheat button to grow map resources.
 	Dune 2000:
 		Added the Atreides grenadier from the 1.06 patch.
 		Added randomized tiles for Sand and Rock terrain.
